Add verbose option and prepare for 0.0.9